Span text full-width on mobile Fixes #28

--- a/assets/css/_media-block.styl
+++ b/assets/css/_media-block.styl
@@ -64,10 +64,9 @@
 
   .body
     grid-area body
-    max-width 400px
     text-align center
-    margin 0 auto
     +tablet-up()
+      max-width 400px
       margin 0
       text-align left
       .title
